--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbProducto_padre.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbProducto_padre.cshtml
@@ -15,7 +15,10 @@
         settings.Properties.ValueType = typeof(decimal);
 
         settings.Properties.Columns.Add("IdProducto", "ID", 10);
-        settings.Properties.Columns.Add("pr_descripcion", "Producto", 90);
+        settings.Properties.Columns.Add("pr_codigo", "Código", 10);
+        settings.Properties.Columns.Add("pr_descripcion", "Producto", 50);
+        settings.Properties.Columns.Add("nom_categoria", "Categoria", 15);
+        settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
     })
     .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_info_bajo_demanda)
     .Bind(Model.IdProducto);
