--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_001.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_001.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.Helps.cl_filtros_Info
+﻿@model Core.Erp.Info.Helps.cl_filtros_facturacion_Info
 @{
     Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
     ViewBag.Title = "FAC_001";
@@ -8,8 +8,8 @@
     }
 }
 @using (Html.BeginForm("FAC_001", "FacturacionReportes", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
-<div class="box collapsed-box">
+    {
+<div class="box">
     <div class="box-header with-border">
         <div class="row">
             <div class="col-md-12">
@@ -18,12 +18,13 @@
         </div>
         <div class="box-tools pull-right">
             <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                <i class="fa fa-plus"></i>
+                <i class="fa fa-minus"></i>
             </button>
             <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
                 <i class="fa fa-times"></i>
             </button>
         </div>
+
     </div>
     <div class="box-body">
         <div class="row">
@@ -35,11 +36,6 @@
                         @Html.ValidationMessageFor(q => q.IdProductoPadre, "", new { @class = "text-danger" })
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="IdProducto">Producto</label>
@@ -49,64 +45,65 @@
                 </div>
             </div>
         </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdCliente">Cliente</label>
-                    @Html.Partial("_CmbCliente_Facturacion", Model)
-                    @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger",@id="IdCliente" })
-                </div>
-            </div>
-
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdClienteContacto">Cliente contacto</label>
-                    @Html.DropDownListFor(q=>q.IdClienteContacto, new SelectList(ViewBag.lst_contacto, "IdContacto", "Nombres"), new { @class="form-control", @id="IdClienteContacto"})
-                    @Html.ValidationMessageFor(q => q.IdClienteContacto, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="IdSucursal">Sucursal</label>
-                    @Html.DropDownListFor(q=>q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class="form-control"})
-                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="">Fecha inicio*</label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        @Html.TextBoxFor(q => q.fecha_ini, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_ini" })
-                        @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="IdCliente">Cliente</label>
+                        @Html.Partial("_CmbCliente_Facturacion", Model)
+                        @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger", @id = "IdCliente" })
                     </div>
                 </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="">Fecha fin*</label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        @Html.TextBoxFor(q => q.fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_fin" })
-                        @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
+
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="IdClienteContacto">Cliente contacto</label>
+                        @Html.DropDownListFor(q => q.IdClienteContacto, new SelectList(ViewBag.lst_contacto, "IdContacto", "Nombres"), new { @class = "form-control", @id = "IdClienteContacto" })
+                        @Html.ValidationMessageFor(q => q.IdClienteContacto, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label for="IdSucursal">Sucursal</label>
+                        @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control" })
+                        @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="">Fecha inicio*</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            @Html.TextBoxFor(q => q.fecha_ini, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_ini" })
+                            @Html.ValidationMessageFor(q => q.fecha_ini, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="">Fecha fin*</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            @Html.TextBoxFor(q => q.fecha_fin, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "fecha_fin" })
+                            @Html.ValidationMessageFor(q => q.fecha_fin, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.box-body -->
     </div>
-    <!-- /.box-body -->
 </div>
-                </div>
+                
             <div class="box">
                 <div class="box-header with-border">
                     <h3 class="box-title">@ViewBag.Title</h3>
@@ -142,16 +139,13 @@
                 $('#fecha_fin').datepicker({
                     autoclose: true
                 })
-
-                cargar_cliente();
                 $("#IdCliente").change(function () {
-                    cargar_cliente();
-                });
-                $("#IdClienteContacto").change(function () {
                     cargar_cliente();
                 });
             });
             function cargar_cliente() {
+
+                $("#IdClienteContacto").empty();
                 var codigo = IdCliente.GetValue();
 
                     var datos = {
