--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
@@ -131,15 +131,14 @@
             $.ajax({
                 type: 'POST',
                 data: JSON.stringify(datos),
-                url: '@Url.Action("dolowadATS", "ATS", new { Area = "Contabilidad" })',
+                url: '@Url.Action("dolowadATS","ATS", new { Area = "Contabilidad" })',
                 async: false,
                 bDeferRender: true,
                 bProcessing: true,
                 dataType: 'json',
                 contentType: 'application/json; charset=utf-8',
                 success: function (data) {
-                    alert('Archivo creado correctamente en C: \Users\jerry\Desktop')
-
+                    window.location = '/Downloads?file=' + data;
                 },
                 error: function (error) {
                 }
