--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
@@ -129,8 +129,8 @@
                                 <!-- Modal content-->
                                 <div class="modal-content">
                                     <div class="modal-header">
+                                        <a class="btn btn-primary" href="@Url.Action("Consulta","ReportesPorUsuario",new { Area = "General" },null)">Reportes</a>
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        <h4 class="modal-title">Menú</h4>
                                     </div>
                                     <div class="modal-body">
                                         @Html.DevExpress().TreeView(settings =>
