--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
@@ -12,117 +12,100 @@
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdProforma)
     
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="pf_codigo">Código</label>
-                    @Html.TextBoxFor(q => q.pf_codigo, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.pf_codigo, "", new { @class = "text-danger" })
-                </div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="IdSucursal">Sucursal*</label>
+                @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
             </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="IdTerminoPago">Termino pago*</label>
-                    @Html.DropDownListFor(q => q.IdTerminoPago, new SelectList(ViewBag.lst_pago, "IdTerminoPago", "nom_TerminoPago"), new { @class = "form-control" , @id="IdTerminoPago"})
-                    @Html.ValidationMessageFor(q => q.IdTerminoPago, "", new { @class = "text-danger" })
-                </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="IdBodega">Bodega*</label>
+                @Html.DropDownListFor(q => q.IdBodega, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_descripcion"), new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
             </div>
-            <div class="col-md-offset-2 col-md-2">
-                <div class="form-group">
-                    <label for="pf_fecha">Fecha*</label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        @Html.TextBoxFor(q => q.pf_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "pf_fecha" })
-                        @Html.ValidationMessageFor(q => q.pf_fecha, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+        </div>
+        <div class="col-md-10">
+            <div class="form-group">
+                <label for="IdCliente">Cliente*</label>
+                @Html.Partial("_CmbCliente_Proforma", Model)
+                @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
             </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="pf_fecha_vcto">Fecha vencimiento*</label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        @Html.TextBoxFor(q => q.pf_fecha_vcto, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "pf_fecha_vcto" })
-                        @Html.ValidationMessageFor(q => q.pf_fecha_vcto, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                <label for="pr_dias_entrega">Días de entrega*</label>
+                @Html.TextBoxFor(q => q.pr_dias_entrega, new { @class = "form-control", @id = "pr_dias_entrega" })
+                @Html.ValidationMessageFor(q => q.pr_dias_entrega, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="pf_atencion_a">Atención a</label>
+                @Html.TextBoxFor(q => q.pf_atencion_a, new { @class = "form-control", @id = "pf_atencion_a" })
+                @Html.ValidationMessageFor(q => q.pf_atencion_a, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="IdVendedor">Vendedor*</label>
+                @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor"), new { @class = "form-control", @id = "IdVendedor" })
+                @Html.ValidationMessageFor(q => q.IdVendedor, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="IdBodega">Bodega*</label>
-                    @Html.DropDownListFor(q => q.IdBodega, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_descripcion"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
-                </div>
-            </div>
 
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="pf_atencion_a">Atención a</label>
-                    @Html.TextBoxFor(q => q.pf_atencion_a, new { @class = "form-control", @id = "pf_atencion_a" })
-                    @Html.ValidationMessageFor(q => q.pf_atencion_a, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="pr_dias_entrega">Días de entrega*</label>
-                    @Html.TextBoxFor(q => q.pr_dias_entrega, new { @class = "form-control" , @id= "pr_dias_entrega" })
-                    @Html.ValidationMessageFor(q => q.pr_dias_entrega, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="pf_plazo">Plazo*</label>
-                    @Html.TextBoxFor(q => q.pf_plazo, new { @class = "form-control" ,@id= "pf_plazo"})
-                    @Html.ValidationMessageFor(q => q.pf_plazo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
+    <div class="col-md-6">
         <div class="col-md-12">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdCliente">Cliente*</label>
-                    @Html.Partial("_CmbCliente_Proforma", Model)
-                    @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
-                </div>
+            <div class="form-group">
+                <label for="IdTerminoPago">Termino pago*</label>
+                @Html.DropDownListFor(q => q.IdTerminoPago, new SelectList(ViewBag.lst_pago, "IdTerminoPago", "nom_TerminoPago"), new { @class = "form-control", @id = "IdTerminoPago" })
+                @Html.ValidationMessageFor(q => q.IdTerminoPago, "", new { @class = "text-danger" })
             </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdVendedor">Vendedor*</label>
-                    @Html.DropDownListFor(q => q.IdVendedor, new SelectList(ViewBag.lst_vendedor, "IdVendedor", "Ve_Vendedor"), new { @class = "form-control" , @id="IdVendedor" })
-                    @Html.ValidationMessageFor(q => q.IdVendedor, "", new { @class = "text-danger" })
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <label for="pf_fecha">Fecha*</label>
+                <div class="input-group date">
+                    <div class="input-group-addon">
+                        <i class="fa fa-calendar"></i>
+                    </div>
+                    @Html.TextBoxFor(q => q.pf_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "pf_fecha" })
+                    @Html.ValidationMessageFor(q => q.pf_fecha, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
+        <div class="col-md-4">
+            <div class="form-group">
+                <label for="pf_plazo">Plazo*</label>
+                @Html.TextBoxFor(q => q.pf_plazo, new { @class = "form-control", @id = "pf_plazo" })
+                @Html.ValidationMessageFor(q => q.pf_plazo, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <label for="pf_fecha_vcto">Vencimiento*</label>
+                <div class="input-group date">
+                    <div class="input-group-addon">
+                        <i class="fa fa-calendar"></i>
+                    </div>
+                    @Html.TextBoxFor(q => q.pf_fecha_vcto, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "pf_fecha_vcto" })
+                    @Html.ValidationMessageFor(q => q.pf_fecha_vcto, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
         <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="pf_observacion">Observación</label>
-                    @Html.TextBoxFor(q => q.pf_observacion, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.pf_observacion, "", new { @class = "text-danger" })
-                </div>
+            <div class="form-group">
+                <label for="pf_observacion">Observación</label>
+                @Html.TextBoxFor(q => q.pf_observacion, new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.pf_observacion, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
+</div>
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index","Proforma",new { Area = "Facturacion" },null)">Cancelar</a>
@@ -147,22 +130,19 @@
             get_info_termino_pago();
         });
         $("#pf_plazo").change(function () {
-            get_info_termino_pago();
+            cargar_fecha_vencimiento();
         });
-        $("#pr_dias_entrega").change(function () {
-            get_info_termino_pago();
-        });
-        $("#pf_fecha_vcto").change(function () {
-            get_info_termino_pago();
-        });
-        $("#pf_atencion_a").change(function () {
-            get_info_cliente();
-        });
-        $("#IdVendedor").change(function () {
-            get_info_cliente();
+        $("#pf_fecha").change(function () {
+            cargar_fecha_vencimiento();
         });
 
     });
+
+    function cargar_fecha_vencimiento() {
+        var vida = $("#pf_plazo").val();
+        var d = new Date($("#pf_fecha").val());
+        $('#pf_fecha_vcto').datepicker("setDate", moment(d, "DD-MM-YYYY").add('days', vida));
+    }
 
         function get_info_termino_pago() {
         var datos = {
@@ -176,9 +156,8 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                    $("#pf_plazo").val();
-                    $("#pr_dias_entrega").val();
-                    $("#pf_fecha_vcto").val();
+                $("#pf_plazo").val(data.Dias_Vct);
+                cargar_fecha_vencimiento();
             },
             error: function (error) {
 
@@ -199,7 +178,7 @@
                 dataType: 'json',
                 contentType: 'application/json; charset=utf-8',
                 success: function (data) {
-                    $("#pf_atencion_a").val();
+                    $("#pf_atencion_a").val(data.info_persona.pe_nombreCompleto);
                     $("#IdVendedor").val();
                 },
                 error: function (error) {
