--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_009.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_009.cshtml
@@ -83,7 +83,7 @@
                         <div class="form-group">
                             <div class="form-group">
                                 <label for="descuento_quincena">Mostrar</label>
-                                @Html.DevExpress().RadioButtonFor(q => q.mostrar_nov_pen, settings =>
+                                @Html.DevExpress().RadioButtonFor(q => q.mostrar_todas_nov, settings =>
                                    {
                                        settings.Name = "mostar_tod";
                                        settings.GroupName = "estado_nov";
